--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,19 +1,30 @@
 <div class="container">
-  <div class="app-title-div">{{ app_name }}</div>
-  <mat-card class="login-card">
-    <mat-card-title class="login-card-title">Inicio de Sesión</mat-card-title>
-    <div>
-      <mat-form-field color="primary" class="username-form-field">
-        <mat-label>Ingrese Matricula</mat-label>
-        <input matInput [(ngModel)]="user_id" (keyup.enter)="submit()" appAutofocus class="username-input"
-               placeholder="2017091234">
-      </mat-form-field>
-      <mat-form-field class="username-form-field">
-        <mat-label>Ingrese Contraseña</mat-label>
-        <input matInput [(ngModel)]="user_id" (keyup.enter)="submit()" class="username-input"
-               placeholder="********">
-      </mat-form-field>
-      <button mat-raised-button (click)="submit()" class="enter-btn" color="primary" style="color: white">Entrar</button>
-    </div>
-  </mat-card>
+  <mat-toolbar color="primary" class="title-size">
+    {{app_name}}
+  </mat-toolbar>
+  <div class="form-container">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title class="form-title-size bold">{{labels.formTitle}}</mat-card-title>
+        <mat-card-subtitle>{{labels.formSubtitle}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-form-field color="primary">
+          <mat-label>{{labels.id}}</mat-label>
+          <input matInput [(ngModel)]="id" (keyup.enter)="submit()" appAutofocus
+                 placeholder="{{labels.idPlaceholder}}">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>{{labels.password}}</mat-label>
+          <input matInput [(ngModel)]="password" (keyup.enter)="submit()"
+                 placeholder="{{labels.passwordPlaceholder}}">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button (click)="submit()" color="primary">
+          {{labels.submit}}
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 </div>
