--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import '~src/global_vars';
 
 @include mat-core();
 
@@ -11,21 +12,18 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
 @include angular-material-theme($app-theme);
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: $back-color;
+}
+
+mat-card {
+  width: 100%;
+  height: fit-content;
+}
 
 //* {
 //  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 //  color: gray;
 //}
-
-.bold {
-  font-weight: bold;
-}
-
-.not_selectable {
-  user-select: none;
-}
-
-.pointer {
-  cursor: pointer;
-}
